csv file is ready

--- a/solution.ipynb
+++ b/solution.ipynb
@@ -12272,7 +12272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [
     {
@@ -12424,7 +12424,7 @@
    ],
    "source": [
     "df = phase_1.create_df(0)\n",
-    "df.to_csv(\"df.csv\")"
+    "df.to_csv(\"df_0.6.csv\")"
    ]
   },
   {
@@ -12440,14 +12440,7 @@
      ]
     }
    ],
-   "source": [
-    "\n",
-    "total =0\n",
-    "runsss = phase_1.runs[:10]\n",
-    "for run in runsss:\n",
-    "    total = total + run.jobs[0].departure_t -run.jobs[0].arrival_t\n",
-    "print(total)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -12462,9 +12455,7 @@
      ]
     }
    ],
-   "source": [
-    "print(phase_1.runs[0].service_times[0],phase_1.runs[0].queue_w_times[0],phase_1.runs[0].jobs[0].departure_t-phase_1.runs[0].jobs[0].arrival_t)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
